# yocaml_foundation

./: .ocamlformat  README.md  dune-project  yocaml_codex.opam  yocaml_data.opam
lib/codex/: datetime.ml  datetime.mli  dune  model.mli  url.ml
lib/data/: dune  yocaml_data.ml  yocaml_data.mli
test/data/: bool_from.ml  dune
